nobase_dist_pkgdata_DATA = readme.txt haarcascades/haarcascade_frontalface_alt.xml \
    haarcascades/haarcascade_frontalface_alt2.xml \
    haarcascades/haarcascade_frontalface_alt_tree.xml \
    haarcascades/haarcascade_frontalface_default.xml \
    haarcascades/haarcascade_fullbody.xml \
    haarcascades/haarcascade_lowerbody.xml \
    haarcascades/haarcascade_profileface.xml \
    haarcascades/haarcascade_upperbody.xml
    
