opencvdocdir = $(pkgdatadir)/doc
nobase_dist_opencvdoc_DATA = cvcam.rtf faq.htm index.htm \
    license.txt opencv.jpg opencv-logo.png opencv-logo2.png opencvman_old.pdf \
    ../THANKS ../ChangeLog \
    papers/algo_tracking.pdf papers/avbpa99.ps papers/camshift.pdf \
    ref/opencvref.css ref/opencvref_cv.htm ref/opencvref_cvaux.htm \
    ref/opencvref_cxcore.htm ref/opencvref_highgui.htm ref/opencvref_ml.htm \
    ref/pics/backprojectpatch.png \
    ref/pics/boundingrect.png  ref/pics/building.jpg  ref/pics/contoursecarea.png \
    ref/pics/cornersubpix.png  ref/pics/defects.png  ref/pics/disparity.png \
    ref/pics/ellipse.png  ref/pics/em1.png  ref/pics/em3.png  ref/pics/em4.png \
    ref/pics/em5.png  ref/pics/em6.png  ref/pics/em7.png \
    ref/pics/em8.png  ref/pics/em9.png  ref/pics/errmsg.png \
    ref/pics/face.png   ref/pics/haarfeatures.png  ref/pics/houghp.png \
    ref/pics/inv_logpolar.jpg  ref/pics/left.jpg   ref/pics/logpolar.jpg \
    ref/pics/maxrect.png  ref/pics/memstorage1.png ref/pics/memstorage2.png \
    ref/pics/minareabox.png  ref/pics/mlp_.png  ref/pics/neuron_model.png \
    ref/pics/pointpolygon.png  ref/pics/quadedge.png  ref/pics/right.jpg \
    ref/pics/sigmoid_bipolar.png  ref/pics/subdiv.png ref/pics/threshold.png \
    python.txt python-wrappers-on-windows.txt
