
pkginclude_HEADERS = \
  opencv/cv.h          \
  opencv/cvaux.hpp     \
  opencv/cvstreams.h   \
  opencv/cvvidsurv.hpp \
  opencv/cxcore.hpp    \
  opencv/cxoperations.hpp \
  opencv/cxtypes.h     \
  opencv/cv.hpp        \
  opencv/cvcompat.h    \
  opencv/cvtypes.h     \
  opencv/cvwimage.h    \
  opencv/cxerror.h     \
  opencv/highgui.h     \
  opencv/highgui.hpp   \
  opencv/cvaux.h       \
  opencv/cvmat.hpp     \
  opencv/cvver.h       \
  opencv/cxcore.h      \
  opencv/cxmisc.h      \
  opencv/ml.h
