# these headers will be installed in /usr/local/include/opencv typically
# the OpenCV Framework might only bring a subset, listed in the toplevel opencv/Makefile.am in FRAMEWORK_XHEADERS

pkginclude_HEADERS = \
  opencv/cv.h          \
  opencv/cv.hpp        \
  opencv/cvaux.h       \
  opencv/cvaux.hpp     \
  opencv/cvcompat.h    \
  opencv/cvstreams.h   \
  opencv/cxmat.hpp     \
  opencv/cvtypes.h     \
  opencv/cvver.h       \
  opencv/cvvidsurv.hpp \
  opencv/cvwimage.h    \
  opencv/cxcore.h      \
  opencv/cxcore.hpp    \
  opencv/cxerror.h     \
  opencv/cxflann.h     \
  opencv/cxmisc.h      \
  opencv/cxoperations.hpp \
  opencv/cxtypes.h     \
  opencv/highgui.h     \
  opencv/highgui.hpp   \
  opencv/ml.h
