# opencv/interfaces/Makefile.am
# 2005-01-23, Mark Asbach <asbach@ient.rwth-aachen.de>

# This Makefile invokes Makefiles of those subdirectories that have been secified
# by the configure script (via AM_CONDITIONAL). It is planned to reactivate
# Matlab wrappers soon, until then, we concentrate on adding the various languages
# that SWIG is able to wrap libraries for.

SUBDIRS = swig
EXTRA_DIST = CMakeLists.txt ffopencv
