
EXTRA_DIST = \
    opencv.iss            \
    cvinfo/cvinfo.cpp     \
    cvinfo/cvinfo.dsp     \
    cvinfo/cvinfo.vcproj

noinst_PYTHON = \
    dos2unix.py                \
    extract_doublepointers.py  \
    gen_make.py                \
    make_index.py              \
    search_leaks.py            \
    check_doc.py               \
    cvt_xml2xml.py             \
    extract_constants.py       \
    extract_macros.py          \
    unix2dos.py

dist_noinst_SCRIPTS = \
    maintainer_clean.cmd
